feat : 앨범 조회 - 앨범 기본 조회 - 앨범 인기 조회 완료 - 테스트 코드 작성